<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dataListModel"
            type="com.hi.dhl.wl3d.model.DataItemModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_black"
            tools:context=".ui.main.MainActivity">

            <ToggleButton
                android:id="@+id/toggle_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/favorite_toggle"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="end"
                android:textOff=""
                android:textOn=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avator"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="@dimen/margin_45dp"
                android:background="@color/color_white"
                app:bindingInfo="@{dataListModel.lrThumbnailUrl}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:translationZ="100dp"
                android:fontFamily="casual"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.175"
                app:layout_constraintTop_toBottomOf="@+id/avator"
                tools:text="@string/name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{dataListModel.name}"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:translationZ="100dp"
                android:fontFamily="casual"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toEndOf="@+id/nameText"
                app:layout_constraintTop_toBottomOf="@+id/avator"
                tools:text="name" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/accountIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountid"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:translationZ="100dp"
                android:fontFamily="casual"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintTop_toBottomOf="@+id/nameValue"
                tools:text="AccountId:" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/accountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{dataListModel.accountId}"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:translationZ="100dp"
                android:fontFamily="casual"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/accountIdText"
                app:layout_constraintTop_toBottomOf="@+id/nameValue"
                tools:text="accountId" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createAtText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createat"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:translationZ="100dp"
                android:fontFamily="casual"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintTop_toBottomOf="@+id/accountValue"
                tools:text="CreateAt:" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createAtValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(dataListModel.createdAt)}"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:translationZ="100dp"
                android:fontFamily="casual"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/createAtText"
                app:layout_constraintTop_toBottomOf="@+id/accountValue"
                tools:text="createAt" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updatedAtText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updatedat"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:translationZ="100dp"
                android:fontFamily="casual"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.036"
                app:layout_constraintTop_toBottomOf="@+id/createAtValue"
                tools:text="UpdatedAt:" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updatedAtValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(dataListModel.updatedAt)}"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:translationZ="100dp"
                android:fontFamily="casual"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/updatedAtText"
                app:layout_constraintTop_toBottomOf="@+id/createAtValue"
                tools:text="updatedAt" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:translationZ="100dp"
                android:fontFamily="casual"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updatedAtValue"
                tools:text="Description:" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{dataListModel.description}"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:translationZ="100dp"
                android:fontFamily="casual"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/descriptionText"
                app:layout_constraintTop_toBottomOf="@+id/updatedAtValue"
                tools:text="description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
